--- a/miPaginaweb/static/css/estilo.css
+++ b/miPaginaweb/static/css/estilo.css
@@ -1,5 +1,5 @@
 *{
-    margin:0px;
+   margin:0px;
    padding:0px;
    box-sizing: border-box;
    list-style:none
@@ -7,7 +7,7 @@
 @media screen and (min-width:1025px) and (max-width:2000px){
 /***********************navegador************************/
 header {
-        
+            
         background:#1b5583;
         width: 100%;
         height: 60px;
@@ -161,15 +161,15 @@ header label:hover{
 .container{
     background-color: white;
     display: flex;  
-    width:100%;
     margin:auto;  
+    
 }
 /*segundo slider*/
 .container2{ 
     display: flex;       
     height: 500px;
-    width:100%;
     margin:auto;
+    
 }
 .title h1{
     text-align: center;
@@ -180,7 +180,6 @@ header label:hover{
 .container2 h5{  
     text-align: center;  
     font-size: 30px;
-    
     font-family: 'Poppins';
 }
 .container2 img{
@@ -315,7 +314,7 @@ header label:hover{
         flex-wrap: wrap;
         text-align: center;
         height: 600px;
-        
+        margin-bottom: 30px;
     }
     .side{
         font-family: 'Poppins';
@@ -323,6 +322,7 @@ header label:hover{
         padding: 30px;
         list-style-type: circle;
         line-height: 3.1;
+        
     }
     .side img{
         border-radius: 50%;
@@ -358,15 +358,15 @@ header label:hover{
     .container{
         background-color: white;
         display: flex;  
-        width:100%;
         margin:auto;  
+    
     }
     /*segundo slider*/
     .container2{ 
         display: flex;       
         height: 500px;
-        width:100%;
         margin:auto;
+    
     }
     .title h1{
         text-align: center;
@@ -377,7 +377,6 @@ header label:hover{
     .container2 h5{  
         text-align: center;  
         font-size: 30px;
-        
         font-family: 'Poppins';
     }
     .container2 img{
@@ -508,7 +507,7 @@ header label:hover{
         text-align: center;
         height: 700px;
         width: 100%;
-        
+        margin: 30px;
     }
     .side{
         font-family: 'Poppins';
@@ -517,6 +516,7 @@ header label:hover{
         list-style-type: circle;
         line-height: 2.5;
         width:20%;
+     
     }
     .side img{
         border-radius: 50%;
@@ -585,8 +585,8 @@ header label:hover{
         flex-wrap: wrap;
         background-color: white;
         display: flex;  
-        width:100%;
         margin:auto;  
+        
     }
    
     /*segundo slider*/
@@ -594,8 +594,8 @@ header label:hover{
         flex-wrap:wrap;
         display: flex;       
         height: 500px;
-        width:100%;
         margin:auto;
+       
     }
     .title h1{
         text-align: center;
@@ -606,7 +606,6 @@ header label:hover{
     .container2 h5{  
         text-align: center;  
         font-size: 30px;
-        
         font-family: 'Poppins';
     }
     .container2 img{
@@ -614,7 +613,6 @@ header label:hover{
         left:3%;
         position: relative;
         border-radius: 10%;
-        
         
     }
     /*ultima parte de la pagina*/
