--- a/miPaginaweb/templates/nosotros.html
+++ b/miPaginaweb/templates/nosotros.html
@@ -1,95 +1,34 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends "Template.html" %}
 {% load static %}
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>CarWash</title>
-       <link rel="stylesheet" href="{% static 'css/nosotros.css' %}">
-       <link rel="stylesheet" href="{% static 'https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css' %}">
-        <script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js' %}"></script>
-        <script src="{% static 'https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js' %}"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" >
 
-        <script>
-                $(document).ready(function () {
-                        $('.slider').bxSlider();
-                });
-        </script>
-
-</head>
-
-<body>
-
-              <header>
-                <input type="checkbox" name="" id="btnMenu">
-                <label for="btnMenu">
-                        <img class="imgl" src="{% static 'fotos/menu.png'%}" width="20px" height="20px" alt="">
-                </label>
-                <nav class="menu">
-                                <div class="logo">
-                                                <img style=" margin-left:20px;  margin-top:10px; " src="{% static 'fotos/carwash.png'%}"  alt=""> 
-                                                <h3 style=" margin-left:70px; color:white;font-family: 'Poppins'; margin-top:-36px;  "  > CarWashMiguel</h3>
-                                        </div>
-                        
-                        <ul >                                             
-                                <li><a href="{%url 'IND' %}">Home</a> </li>
-                                <li> <a href="{%url 'GALE' %}">Galeria</a></li>
-                                <li><a href="{%url 'CON' %}">Contacto</a> </li>
-                                
-
-                                {%if user.is_authenticated %}
-                                        <li><a href="{%url 'ADP' %}">Administrar Insumos</a> </li>                                                                             
-                                       <li> <a href="{% url 'LOGOUT' %}"> Cerrar Sesion </a></li>
-                                        <li><a href="">Bienvenido: {{user.first_name}}</a> </li>
-                                {% else %}
-                                       <li>  <a href="{% url 'LOGIN' %}"> Iniciar Sesion </a></li>
-                                        <li> <a href="{%url 'FORC' %}">Nuevo Usuario</a></li>
-                                {% endif %}
-
-                                                       
-                        </ul>
-                </nav>
-        </header>
-        {% for item  in myv  %}
-        
-        
-        <div class="row">
-
-                <div class="side">
-                        <h1>Vision</h1>
-                        <h3>{{item.vision}}</h3>
-                </div>
-
-                <div class="side2">
-                        <img src="{%static 'fotos/empleados/emp1.jpg'%}" width="500px" height="300px">
-                </div>
+{% block estilos %}
+    <link rel="stylesheet" href="{% static 'css/nosotros.css' %}">
+{% endblock estilos %}
+    
+{%block contenido %}
+    {% for item  in myv  %}
+      <div class="row">
+        <div class="side">
+          <h1>Vision</h1>
+          <h3>{{item.vision}}</h3>
         </div>
 
-        <div class="row">
-
-                <div class="side2">
-                        <img src="{%static 'fotos/empleados/emp4.jpg'%}" width="500px" height="300px">
-                </div>
-
-                <div class="side3">
-                        <h1>Nuestra Mision</h1>
-                        <h3>{{item.mision}}</h3>
-                </div>
+        <div class="side2">
+          <img src="{%static 'fotos/empleados/emp1.jpg'%}" width="500px" height="300px">
         </div>
-        {% endfor %}
+      </div>
 
+      <div class="row">
+        <div class="side2">
+          <img src="{%static 'fotos/empleados/emp4.jpg'%}" width="500px" height="300px">
+        </div>
 
+        <div class="side3">
+          <h1>Nuestra Mision</h1>
+          <h3>{{item.mision}}</h3>
+        </div>
+      </div>
+    {% endfor %}
 
-         <footer>
-                <div class="footer">
-                        <h5>Copyright 2020 © Todos Los Derechos Reservados</h5>      
-                </div>
-        </footer>
-
-
-
-</body>
-
-</html>
+{% endblock contenido %}
+      
