--- a/myProyectoPaginaWeb/miPaginaweb/templates/galeria.html
+++ b/myProyectoPaginaWeb/miPaginaweb/templates/galeria.html
@@ -7,6 +7,9 @@
     <script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js' %}"></script>
     <script src="{% static 'https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js' %}"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" >
+    <link rel="stylesheet" href="{% static 'css/galeria_Lightbox.css' %}">
+    <script src="{% static 'js/galeria_Lightbox.js' %}"></script>
+
 {% endblock estilos %}
 
 {% block contenido %}
@@ -18,88 +21,38 @@
 
     <div class="row">
       <div class="contenido">
-          <h1>Empleados</h1>
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/emp7.jpg">
-              <img src="{% static 'fotos/empleados/emp7.jpg' %}"  width="600" height="400">
-            </a>  
-          </div>
-              
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/emp3.jpg">
-              <img src="{%static 'fotos/empleados/emp3.jpg'%}" alt="Forest" width="600" height="400">
-            </a>
-          </div>
-              
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/emp6.jpg">
-              <img src="{%static 'fotos/empleados/emp6.jpg'%}" alt="Northern Lights" width="600" height="400">
-            </a>
-          </div>
-              
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/emp8.jpg">
-              <img src="{%static 'fotos/empleados/emp8.jpg'%}" alt="Mountains" width="600" height="400">
-            </a>
-          </div>
-            
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/empb.jpg">
-              <img src="{%static 'fotos/empleados/empb.jpg'%}" alt="Mountains" width="600" height="400">
-            </a>
-          </div>
-            
-          <div class="galeria">
-            <a target="_blank" href="fotos/empleados/empn.jpg">
-              <img src="{%static 'fotos/empleados/empn.jpg'%}" alt="Mountains" width="600" height="400">
-            </a>
-          </div>
+          <h1>Galería</h1>
+          {% for item in galeria %}
+            <div class="galeria">
+              <img src="{{item.imagen.url}}"  width="600" height="400" onclick="openModal();currentSlide({{ forloop.counter }})">  
+            </div>
+          {% endfor %}    
       </div>
     </div>
-
-    <div class="line"></div>
-
-      <div class="row">
-        <div class="contenido2">
-            <h1>Instalacion</h1>
-            <div class="galeria">
-                <a target="_blank" href="fotos/instalacion/inst1.jpg">
-                    <img src="{%static 'fotos/instalacion/inst1.jpg'%}"  width="600" height="400">
-                </a>             
-            </div>
-                      
-            <div class="galeria">
-                <a target="_blank" href="fotos/instalacion/inst2.jpg">
-                  <img src="{%static 'fotos/instalacion/inst2.jpg'%}"  width="600" height="400">
-                </a>               
-            </div>
-                      
-            <div class="galeria">
-                <a target="_blank" href="fotos/instalacion/inst3.png">
-                    <img src="{%static 'fotos/instalacion/inst3.png'%}"  width="600" height="400">
-                </a>                        
-            </div>
-
-            <div class="galeria">
-                <a target="_blank" href="fotos/instalacion/inst4.jpg">
-                    <img src="{%static 'fotos/instalacion/inst4.jpg'%}"  width="600" height="400">
-                </a>
-                     
-            </div>
-
-            <div class="galeria">
-              <a target="_blank" href="fotos/instalacion/inst5.jpg">
-                  <img src="{%static 'fotos/instalacion/inst5.jpg'%}"  width="600" height="400">
-              </a>         
-            </div>
-
-            <div class="galeria">
-              <a target="_blank" href="fotos/instalacion/inst6.jpg">
-                <img src="{%static 'fotos/instalacion/inst6.jpg'%}"  width="600" height="100">
-            </a>    
-            </div>
-
-        </div>
+  
+  <!-- Lightbox, extraido de w3Schools -->
+<div id="myModal" class="modal">
+  <span class="close cursor" id="close_cursor" onclick="closeModal()">&times;</span>
+  <div class="modal-content">
+  
+    {% for item in galeria %}
+      <div class="mySlides">
+        <div class="numbertext"> {{forloop.counter}} / {{galeria|length}}</div>
+        <img src="{{item.imagen.url}}" style="width:100%">
       </div>
+    {% endfor %}
+    
+    <!-- Next/previous controls -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <!-- Caption text -->
+    <div class="caption-container">
+      <p id="caption"></p>
+    </div>
+
+    
+  </div>
+</div>
 
  {% endblock contenido %}
