avance en css de template

--- a/myProyectoPaginaWeb/miPaginaweb/templates/formRegistro.html
+++ b/myProyectoPaginaWeb/miPaginaweb/templates/formRegistro.html
@@ -43,7 +43,8 @@
     {% if sw == 3 %}
         <script>
             setTimeout(function(){alert("Email ya existente en la base de datos")}; 500);
-        </script>          
+        </script>     
+    {% endif %}     
 {% endblock contenido %}
 
     
