--- a/myProyectoPaginaWeb/miPaginaweb/static/css/nosotros.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/nosotros.css
@@ -1,56 +1,13 @@
 /***********************navegador************************/
 *{
-    margin:0px;
+   margin:0px;
    padding:0px;
    box-sizing: border-box;
    list-style:none;
 }
 @media screen and (min-width:1025px) and (max-width:2000px){
 
-    header {
-        
-        background:#1b5583;
-        width: 100%;
-        height: 60px;
-        z-index: 100;
-        position: fixed;
-        top: 0;
-     
-             
-}
-#btnMenu{
-    display: none;
-}
 
-header label{
-    display: none;   
-    
-    width: 80px;
-    height: 20px;
-
-}
-header label:hover{
-    cursor: pointer;
-}
-
-.menu ul {
-    margin-right: 40px;
-   float: right;
-   margin-top:-20px; 
-    display:flex;
-}
-.menu li a {
-    font-size:14px;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    font-family: "Poppins";
-
-}
-
-.menu li:hover{
-    text-decoration: underline;
-}
 
 /**************************primera seccion de la pagina**********************/
 
@@ -66,12 +23,12 @@ header label:hover{
 }
 .side{   
     flex:50%;
-    padding:250px 30px;
+    padding:100px 30px;
     line-height: 2.0;
 }
 .side2{   
     flex:50%;
-    padding:200px 30px;
+    padding:100x 30px;
     line-height: 2.0;
 }
 .side2 img{
@@ -80,7 +37,7 @@ header label:hover{
 }
 .side3{
     flex:50%;
-    padding:250px 30px;
+    padding:100px 30px;
     line-height: 2.0;
 
 }
