--- a/myProyectoPaginaWeb/miPaginaweb/templates/Template.html
+++ b/myProyectoPaginaWeb/miPaginaweb/templates/Template.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title src="{% static 'fotos/cliente/sergio'%}.jpg">CarWash </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="{% static 'css/template.css' %}">
     <!-- Bloque para colocar estilos -->
     {% block estilos %}
     
@@ -18,6 +19,7 @@
 
 <body>
     <!-- Cabecera de la Página -->    
+    <!--
     <header>
         <input type="checkbox" name="" id="btnMenu">
         <label for="btnMenu">
@@ -44,11 +46,36 @@
                 {% endif %}
              </ul>
         </nav>
-    </header>
+    </header> -->
+
+        <nav class="navbar navbar-expand-md navbar-light" id="navbarPage">
+            <a class="navbar-brand href=#">
+                <img style=" margin-left:20px;  margin-top:10px; " src="{% static 'fotos/carwash.png'%}"  alt=""> 
+                <a id="navbar-brand"> CarWashMiguel</a>
+            </a>    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>  
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <ul class="navbar-nav mr-auto">  
+                <a class="nav-item nav-link" href="{%url 'IND'%}">Inicio</a></li>                                             
+                <a class="nav-item nav-link" href="{%url 'NOS' %}">Nosotros</a></li>
+                <a class="nav-item nav-link" href="{%url 'GALE' %}">Galeria</a></li>
+                <a class="nav-item nav-link" href="{%url 'CON' %}">Contacto</a></li>
+                {%if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{%url 'ADP' %}">Administrar Insumos</a></li>                                                                             
+                        <a class="nav-item nav-link" href="">Bienvenido: {{user.first_name}}</a></li>
+                        <a class="nav-item nav-link" href="{% url 'LOGOUT' %}"> Cerrar Sesion </a></li>
+                {% else %}
+                        <a class="nav-item nav-link" href="{% url 'LOGIN' %}"> Iniciar Sesion </a></li>
+                        <a class="nav-item nav-link" href="{%url 'FORC' %}">Nuevo Usuario</a></li>
+                {% endif %}
+              </ul>
+            </div>
+        </nav>
     
     <!-- Contenedor de las Páginas -->
     {% block contenido %}
-    
 
     {% endblock contenido %}    
 
