--- a/myProyectoPaginaWeb/miPaginaweb/templates/index.html
+++ b/myProyectoPaginaWeb/miPaginaweb/templates/index.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block estilos %}
-    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index_xs.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index_sm.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index_md.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -35,8 +37,8 @@
 </div>
 
 <!-- Sección de Precios -->
-<div class="row">
-    <div class="side">
+<div class="container" id="containerPrecios">
+    <div class="col-xs-10 col-sm-10 col-md-4">
         <img src="{%static 'fotos/019-car service.png' %}"  width="120px" height="80px" alt="">
         <h2>Paquete 1</h2>
         <p>Lavado</p>
@@ -46,7 +48,7 @@
         <h1>$10.000</h1>
     </div>
 
-    <div class="side2">
+    <div class="col-xs-10 col-sm-10 col-md-4">
         <img src="{%static 'fotos/027-car wash.png' %}" width="120px" height="80px" alt="">
         <h2> Paquete 2</h2>
         <p>Lavado</p>
@@ -58,7 +60,7 @@
         <h1>$15.000</h1>
     </div>
 
-    <div class="side3">
+    <div class="col-xs-10 col-sm-10 col-md-4">
         <img src="{%static 'fotos/013-polish.png' %}" width="120px" height="80px" alt="">
         <h2>Paquete 3</h2>
         <p>Lavado</p>
