--- a/myProyectoPaginaWeb/miPaginaweb/static/css/galeria.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/galeria.css
@@ -56,8 +56,8 @@ header label:hover{
     flex-wrap: wrap;
     text-align: center;  
     width: 100%;
-    height: 600px;
-    background-color:  rgb(255, 255, 255);
+    height: 100%;
+    background-color:  white;
    
 
 }
@@ -65,7 +65,7 @@ header label:hover{
     flex-wrap: wrap;
    
     width:  100%;
-    height: 50%;
+    height: 100%;
     padding-top: 70px;
     padding-left:230px;
 
