--- a/myProyectoPaginaWeb/miPaginaweb/static/css/nosotros.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/nosotros.css
@@ -16,24 +16,29 @@
     flex-wrap: wrap;
     text-align: center;  
     width: 100%;
-    height:700px;
+    height:500px;
     background-color:  rgb(255, 255, 255);
    
 
 }
+.side2 h3{
+    font-size: 25px; 
+    padding: 30px;
+}
 .side{   
+   
     flex:50%;
     padding:100px 30px;
     line-height: 2.0;
 }
 .side2{   
     flex:50%;
-    padding:100x 30px;
+   margin-top: 80px;
     line-height: 2.0;
 }
 .side2 img{
-    height: 350px;
-    width:100%;
+    height: 10px;
+    width:1px;
 }
 .side3{
     flex:50%;
@@ -72,7 +77,7 @@
         
        position:fixed;
        left:12%;
-       background: rgb(255, 255, 255);
+       background: #1b5f83;
        top: 4.7%;
        width: 80%;
       margin-top: -100%;
@@ -92,7 +97,7 @@
         display:block;
         text-align: center;
         padding: 8px;
-        color: aliceblue;
+        color: #1b5f83;
         text-decoration: none;
         list-style: none;
         
@@ -132,6 +137,10 @@
         padding:50px 30px;
         line-height: 2.0;
 
+    }
+    .side2 h3{
+        font-size: 25px; 
+        padding:10px 50px;
     }
     
     
@@ -219,7 +228,7 @@
     }
    
     .side{
-        
+        width: 200px;
         flex:50%;
         padding:55px;
         line-height: 2.0;
@@ -229,6 +238,10 @@
         width: 40%;        
         flex:50%;    
         line-height: 2.0;
+    }
+    .side2 h3{
+        padding: 10px 20px;
+        font-size: 20px;
     }
     .side3 {
         
