--- a/myProyectoPaginaWeb/miPaginaweb/templates/Template.html
+++ b/myProyectoPaginaWeb/miPaginaweb/templates/Template.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="{% static 'css/template.css' %}">
     <!-- Bloque para colocar estilos -->
     {% block estilos %}
+    <link rel="stylesheet" href="{% static 'css/galeria.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js'"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" >
+    <link rel="stylesheet" href="{% static 'css/galeria_Lightbox.css' %}">
+    <script src="{% static 'js/galeria_Lightbox.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/template.css' %}">
     
     {% endblock estilos %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,6 +54,7 @@
              </ul>
         </nav>
     </header> -->
+ 
 
         <nav class="navbar navbar-expand-md navbar-light" id="navbarPage">
             <a class="navbar-brand href=#">
@@ -56,9 +64,9 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>  
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
               <ul class="navbar-nav mr-auto">  
-                <a class="nav-item nav-link" href="{%url 'IND'%}">Inicio</a></li>                                             
+                <a class="nav-item nav-link"  href="{%url 'IND'%}">Inicio</a></li>                                             
                 <a class="nav-item nav-link" href="{%url 'NOS' %}">Nosotros</a></li>
                 <a class="nav-item nav-link" href="{%url 'GALE' %}">Galeria</a></li>
                 <a class="nav-item nav-link" href="{%url 'CON' %}">Contacto</a></li>
